# novagit

./: AGENTS.md  CMakeLists.txt  GitGUIApp.desktop  LICENSE  NovaGit.desktop  README.md
src/: AIHandler.cpp  AIHandler.h  CommitItemWidget.cpp  CommitItemWidget.h  DiffView.cpp  DiffView.h  GitManager.cpp  GitManager.h  MainWindow.cpp  MainWindow.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp
